Finished the delete code.
